--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "eslint-plugin-react": "7.23.2",
     "nodemon": "^2.0.7",
     "prettier": "2.3.0",
+    "sequelize-auto": "^0.8.3",
     "sequelize-cli": "^6.2.0",
     "typescript": "^4.1.3"
   }
