--- a/package.json
+++ b/package.json
@@ -15,10 +15,11 @@
     "prettier": "prettier 'src/**/*.ts'",
     "prettier:fix": "prettier --write 'src/**/*.ts'",
     "eslint": "eslint 'src/**/*.ts'",
-    "eslint:fix": "eslint --fix 'src/**/*.ts'"
+    "eslint:fix": "eslint --fix 'src/**/*.ts'",
+    "test": "env TS_NODE_COMPILER_OPTIONS='{\"module\": \"commonjs\" }' mocha -r ts-node/register 'src/**/*test.ts'"
   },
   "dependencies": {
-    "chai": "^4.2.0",
+    "chai": "^4.3.4",
     "chai-asserttype": "^1.0.5",
     "chai-http": "^4.3.0",
     "cls-hooked": "^4.2.2",
@@ -31,7 +32,7 @@
     "joi": "^17.3.0",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
-    "mocha": "^8.2.1",
+    "mocha": "^8.4.0",
     "moment-timezone": "^0.5.32",
     "morgan": "^1.10.0",
     "pg": "^8.5.1",
@@ -39,13 +40,17 @@
     "sequelize": "^6.5.0"
   },
   "devDependencies": {
+    "@types/chai": "^4.2.18",
     "@types/compression": "^1.7.0",
     "@types/cookie-parser": "^1.4.2",
     "@types/cors": "^2.8.9",
     "@types/express": "^4.17.11",
+    "@types/faker": "^5.5.5",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/lodash": "^4.14.168",
+    "@types/mocha": "^8.2.2",
     "@types/morgan": "^1.9.2",
+    "@types/sinon": "^10.0.0",
     "@typescript-eslint/eslint-plugin": "4.25.0",
     "@typescript-eslint/parser": "4.25.0",
     "eslint": "7.27.0",
@@ -55,10 +60,13 @@
     "eslint-plugin-jsx-a11y": "6.4.1",
     "eslint-plugin-prettier": "3.4.0",
     "eslint-plugin-react": "7.23.2",
+    "faker": "^5.5.3",
     "nodemon": "^2.0.7",
     "prettier": "2.3.0",
     "sequelize-auto": "^0.8.3",
     "sequelize-cli": "^6.2.0",
+    "sinon": "^11.1.0",
+    "ts-node": "^10.0.0",
     "typescript": "^4.1.3"
   }
 }
