--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -30,6 +30,7 @@
     "no-var": "off",
     "vars-on-top": "off",
     "@typescript-eslint/no-non-null-assertion": "off",
-    "no-redeclare": "off"
+    "no-redeclare": "off",
+    "no-unused-express": "off"
   }
 }
