--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "test:controller": "env TS_NODE_COMPILER_OPTIONS='{\"module\": \"commonjs\" }' mocha -r ts-node/register 'src/main/controllers/*test.ts'"
   },
   "dependencies": {
+    "@types/multer": "^1.4.5",
     "chai": "^4.3.4",
     "chai-asserttype": "^1.0.5",
     "chai-http": "^4.3.0",
@@ -39,9 +40,11 @@
     "mocha": "^8.4.0",
     "moment-timezone": "^0.5.32",
     "morgan": "^1.10.0",
+    "multer": "^1.4.2",
     "pg": "^8.5.1",
     "pg-format": "^1.0.4",
-    "sequelize": "^6.5.0"
+    "sequelize": "^6.5.0",
+    "uuidv4": "^6.2.8"
   },
   "devDependencies": {
     "@types/chai": "^4.2.18",
