--- a/.gitignore
+++ b/.gitignore
@@ -197,3 +197,4 @@ $RECYCLE.BIN/
 # End of https://www.toptal.com/developers/gitignore/api/node,vscode,linux,macos,windows
 
 build
+src/main/assets
